--- a/mod.conf
+++ b/mod.conf
@@ -3,5 +3,5 @@ depends = default
 optional_depends = mesecons
 description = Set selected block x-times at given interval
 title = XYZ Constructor
-author = mmm-sued
+author = mmmsued
 min_minetest_version = 5.3
